--- a/Documentation/overview-tree.html
+++ b/Documentation/overview-tree.html
@@ -52,22 +52,22 @@ loadScripts(document, 'script');</script>
 </div>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal contents-list">
-<li><a href="annotations/package-tree.html">annotations</a>, </li>
-<li><a href="model/package-tree.html">model</a></li>
+<li><a href="../src/annotations/package-tree.html">annotations</a>, </li>
+<li><a href="../src/model/package-tree.html">model</a></li>
 </ul>
 <section class="hierarchy">
 <h2 title="Class Hierarchy">Class Hierarchy</h2>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">model.<a href="model/Employee.html" class="type-name-link" title="class in model">Employee</a>
+<li class="circle">model.<a href="../src/model/Employee.html" class="type-name-link" title="class in model">Employee</a>
 <ul>
-<li class="circle">model.<a href="model/Designer.html" class="type-name-link" title="class in model">Designer</a></li>
-<li class="circle">model.<a href="model/Manager.html" class="type-name-link" title="class in model">Manager</a></li>
-<li class="circle">model.<a href="model/SoftwareEngineer.html" class="type-name-link" title="class in model">SoftwareEngineer</a></li>
+<li class="circle">model.<a href="../src/model/Designer.html" class="type-name-link" title="class in model">Designer</a></li>
+<li class="circle">model.<a href="../src/model/Manager.html" class="type-name-link" title="class in model">Manager</a></li>
+<li class="circle">model.<a href="../src/model/SoftwareEngineer.html" class="type-name-link" title="class in model">SoftwareEngineer</a></li>
 </ul>
 </li>
-<li class="circle"><a href="../Documentation/Main.html" class="type-name-link" title="class in Unnamed Package">Main</a></li>
+<li class="circle"><a href="Main.html" class="type-name-link" title="class in Unnamed Package">Main</a></li>
 </ul>
 </li>
 </ul>
@@ -75,10 +75,10 @@ loadScripts(document, 'script');</script>
 <section class="hierarchy">
 <h2 title="Annotation Interface Hierarchy">Annotation Interface Hierarchy</h2>
 <ul>
-<li class="circle">annotations.<a href="annotations/PermissionAnno.html" class="type-name-link" title="annotation interface in annotations">PermissionAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
-<li class="circle">annotations.<a href="annotations/PermissionsArrayAnno.html" class="type-name-link" title="annotation interface in annotations">PermissionsArrayAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
-<li class="circle">annotations.<a href="annotations/RoleAnno.html" class="type-name-link" title="annotation interface in annotations">RoleAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
-<li class="circle">annotations.<a href="annotations/VersionAnno.html" class="type-name-link" title="annotation interface in annotations">VersionAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
+<li class="circle">annotations.<a href="../src/annotations/PermissionAnno.html" class="type-name-link" title="annotation interface in annotations">PermissionAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
+<li class="circle">annotations.<a href="../src/annotations/PermissionsArrayAnno.html" class="type-name-link" title="annotation interface in annotations">PermissionsArrayAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
+<li class="circle">annotations.<a href="../src/annotations/RoleAnno.html" class="type-name-link" title="annotation interface in annotations">RoleAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
+<li class="circle">annotations.<a href="../src/annotations/VersionAnno.html" class="type-name-link" title="annotation interface in annotations">VersionAnno</a> (implements java.lang.annotation.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/annotation/Annotation.html" title="class or interface in java.lang.annotation" class="external-link">Annotation</a>)</li>
 </ul>
 </section>
 </main>
